# ride

./: .gitignore  CMakeLists.txt  README.md  TestProjectConfig.prox  default.cnf  drone.sh  lex.l  libqscintilla2.so.12.0.1  paths.sh  rix  rix.sh
QScintilla_gpl-2.9.2/: ChangeLog  NEWS
QScintilla_gpl-2.9.2/Python/: configure-old.py  configure.py
QScintilla_gpl-2.9.2/Qt4Qt5/: Makefile  libqscintilla2_qt5.so.12.0.1  moc_SciClasses.cpp  moc_ScintillaQt.cpp  moc_qsciabstractapis.cpp  moc_qsciapis.cpp  moc_qscilexer.cpp  moc_qscilexeravs.cpp  moc_qscilexerbash.cpp  moc_qscilexerbatch.cpp  moc_qscilexercmake.cpp  moc_qscilexercoffeescript.cpp  moc_qscilexercpp.cpp  moc_qscilexercsharp.cpp  moc_qscilexercss.cpp  moc_qscilexercustom.cpp  moc_qscilexerd.cpp  moc_qscilexerdiff.cpp  moc_qscilexerfortran.cpp  moc_qscilexerfortran77.cpp  moc_qscilexerhtml.cpp  moc_qscilexeridl.cpp  moc_qscilexerjava.cpp  moc_qscilexerjavascript.cpp  moc_qscilexerlua.cpp  moc_qscilexermakefile.cpp  moc_qscilexermatlab.cpp  moc_qscilexeroctave.cpp  moc_qscilexerpascal.cpp  moc_qscilexerperl.cpp  moc_qscilexerpo.cpp  moc_qscilexerpostscript.cpp  moc_qscilexerpov.cpp  moc_qscilexerproperties.cpp  moc_qscilexerpython.cpp  moc_qscilexerruby.cpp  moc_qscilexerspice.cpp  moc_qscilexersql.cpp  moc_qscilexertcl.cpp  moc_qscilexertex.cpp  (+8 more)
QScintilla_gpl-2.9.2/Qt4Qt5/features/: qscintilla2.prf
QScintilla_gpl-2.9.2/designer-Qt4Qt5/: Makefile  designer.pro  moc_qscintillaplugin.cpp  qscintillaplugin.h
QScintilla_gpl-2.9.2/doc/: qscintilla-Qt4Qt5.dxy
QScintilla_gpl-2.9.2/doc/html-Qt4Qt5/: annotated.html  classQsciAPIs-members.html  classQsciAPIs.html  classQsciAbstractAPIs-members.html  classQsciAbstractAPIs.html  classQsciCommand-members.html  classQsciCommand.html  classQsciCommandSet-members.html  classQsciCommandSet.html  classQsciDocument-members.html  classQsciDocument.html  classQsciLexer-members.html  classQsciLexer.html  classQsciLexerAVS-members.html  classQsciLexerAVS.html  classQsciLexerBash-members.html  classQsciLexerBash.html  classQsciLexerBatch-members.html  classQsciLexerBatch.html  classQsciLexerCMake-members.html  classQsciLexerCMake.html  classQsciLexerCPP-members.html  classQsciLexerCPP.html  classQsciLexerCSS-members.html  classQsciLexerCSS.html  classQsciLexerCSharp-members.html  classQsciLexerCSharp.html  classQsciLexerCoffeeScript-members.html  classQsciLexerCoffeeScript.html  classQsciLexerCustom-members.html  classQsciLexerCustom.html  classQsciLexerD-members.html  classQsciLexerD.html  classQsciLexerDiff-members.html  classQsciLexerDiff.html  classQsciLexerFortran-members.html  classQsciLexerFortran.html  classQsciLexerFortran77-members.html  classQsciLexerFortran77.html  classQsciLexerHTML-members.html  (+139 more)
QScintilla_gpl-2.9.2/example-Qt4Qt5/: Makefile  application  moc_mainwindow.cpp  qrc_application.cpp
resizable_arr/: sizable.c
ride-gui/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  autocompletion.cpp  autocompletion.h  compilerhandler.cpp  compilerhandler.h  customscintilla.cpp  customscintilla.h  flex_todo.txt  globals.h  icons.qrc  lex.l  lex.yy.c  lexershare.h  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  parsershare.h  ride-gui.pro  rixlexer.cpp  rixlexer.h  rixparser.c  rixparser.h  rixparser_handler.cpp  rixparser_handler.h  scintilladoc.cpp  scintilladoc.h  sharedmemoryutilities.h  sharedmemoryutilties.cpp  syntaxcolours.h  test.h  themehandler.cpp  themehandler.h
ride-gui/Compiler/: compilerhandler.cpp  compilerhandler.h  projecthandler.cpp  projecthandler.h
ride-gui/Scintilla/: lexershare.h  scintilladoc.cpp  scintilladoc.h  syntaxcolours.h  themehandler.cpp  themehandler.h
ride-gui/ride_parser/: Joyce-Collingwood.rit  errors.c  errors.h  lex.yy.c  makefile  out.sh  parser.c  parser_error.h  parser_sem.h  rix.sh  rix.tab.c  rix.tab.h  rix.y  rix_temp_file.rit  rixc  rixc.c  rixc.h  test.rit.h  test.rit.sh  www.rit
ride_parser/: CMakeLists.txt  errors.c  errors.h  lex.yy.c  makefile  ride_parser.sublime-workspace  rix.tab.c  rix.tab.h  rix.y  rix_temp_file.rit  rixc  rixc.c  rixc.h  rixparser.h  test.rit  test.rit.c  test.rit.h
testshared/: mainprocess.cpp  parser.c
