cmake_minimum_required(VERSION 3.5)
project(ride)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    ride_parser/benchmarks/benchmark.c
    ride_parser/benchmarks/benchmark.py
    ride_parser/benchmarks/benchmark.rit
    ride_parser/doc/tutorial.md
    ride_parser/examples/generatedcode/benchmark.rit
    ride_parser/examples/generatedcode/benchmark.rit.c
    ride_parser/examples/generatedcode/benchmark.rit.h
    ride_parser/examples/99bottles_alt.rit
    ride_parser/examples/99bottles_normal.rit
    ride_parser/examples/example.rit
    ride_parser/examples/factorial.rit
    ride_parser/examples/fibonacci.rit
    ride_parser/examples/multiplicationtables.rit
    ride_parser/examples/PointLine.rit
    ride_parser/examples/towersofhanoi.rit
    ride_parser/examples/towersofhanoi_short.rit
    ride_parser/ext/BetterString/BetterString.c
    ride_parser/ext/BetterString/BetterString.h
    ride_parser/ext/BetterString/BetterString.rit
    ride_parser/ext/BetterString/BetterStringTest.py
    ride_parser/ext/BetterString/BetterStringTest.rit
    ride_parser/ext/BetterString/bstrlib.c
    ride_parser/ext/BetterString/bstrlib.h
    ride_parser/ext/BetterString/bstrlib.txt
    ride_parser/ext/BetterString/LICENSE
    ride_parser/highlighting/makelang.sh
    ride_parser/highlighting/ritchie.lang
    ride_parser/ObjectTree/ObjectTree_Applied.txt
    ride_parser/ObjectTree/ObjectTree_CFile.txt
    ride_parser/ObjectTree/ObjectTree_HFile.txt
    ride_parser/ObjectTree/ObjectTree_Input.txt
    ride_parser/rsl/Array.rit
    ride_parser/rsl/rsl.c
    ride_parser/rsl/rsl.h
    ride_parser/rsl/rsl.rit
    ride_parser/rsl/RSL_Array.c
    ride_parser/rsl/RSL_Array.h
    ride_parser/rsl/RSL_Stream.c
    ride_parser/rsl/RSL_Stream.h
    ride_parser/rsl/RSL_String.c
    ride_parser/rsl/RSL_String.h
    ride_parser/rsl/RSL_Vector.c
    ride_parser/rsl/RSL_Vector.h
    ride_parser/rsl/Stream.rit
    ride_parser/rsl/String.rit
    ride_parser/rsl/Vector.rit
    ride_parser/tests/CodeBlocks.rit
    ride_parser/tests/codeinsert.rit
    ride_parser/tests/condreturn.rit
    ride_parser/tests/expressionsFloat.rit
    ride_parser/tests/expressionsInt.rit
    ride_parser/tests/floatDeclaration.rit
    ride_parser/tests/functions.rit
    ride_parser/tests/GenericTest1.rit
    ride_parser/tests/GenericTest2.rit
    ride_parser/tests/inheritance.rit
    ride_parser/tests/intDeclaration.rit
    ride_parser/tests/MemManagedString1.rit
    ride_parser/tests/ObjectAtIndex.rit
    ride_parser/tests/oneliner.rit
    ride_parser/tests/out.log
    ride_parser/tests/StreamTest.rit
    ride_parser/tests/test.c
    ride_parser/tests/testfile.text
    ride_parser/tests/UnknownIdentError.rit
    ride_parser/clr.sh
    ride_parser/CMakeLists.txt
    ride_parser/comp.sh
    ride_parser/crsl.c
    ride_parser/crsl.h
    ride_parser/errors.c
    ride_parser/errors.h
    ride_parser/example.rit
    ride_parser/import.c
    ride_parser/lex.yy.c
    ride_parser/LICENCE.md
    ride_parser/Makefile
    ride_parser/ObjectTree.c
    ride_parser/ObjectTree.h
    ride_parser/preproc.c
    ride_parser/preproc.h
    ride_parser/README.md
    ride_parser/rix.l
    ride_parser/rix.sh
    ride_parser/rix.tab.c
    ride_parser/rix.tab.h
    ride_parser/rix.y
    ride_parser/rix_temp_file.rit
    ride_parser/rixbuild.sh
    ride_parser/rixc
    ride_parser/rixc.c
    ride_parser/rixc.h
    ride_parser/test.rit
    ride_parser/test.rit.c
    ride_parser/test.rit.h
    ride_parser/test.rit.log
    ride_parser/test.rit.out
    ride_parser/test.rit.sh
    ride_parser/wizard.sh
    LICENSE
    README.md)

add_executable(ride ${SOURCE_FILES})