cmake_minimum_required(VERSION 3.5)
project(ride_parser)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    benchmarks/benchmark.c
    benchmarks/benchmark.py
    benchmarks/benchmark.rit
    doc/tutorial.md
    examples/generatedcode/benchmark.rit
    examples/generatedcode/benchmark.rit.c
    examples/generatedcode/benchmark.rit.h
    examples/99bottles_alt.rit
    examples/99bottles_normal.rit
    examples/example.rit
    examples/factorial.rit
    examples/fibonacci.rit
    examples/multiplicationtables.rit
    examples/PointLine.rit
    examples/towersofhanoi.rit
    examples/towersofhanoi_short.rit
    ext/BetterString/BetterString.c
    ext/BetterString/BetterString.h
    ext/BetterString/BetterString.rit
    ext/BetterString/BetterStringTest.py
    ext/BetterString/BetterStringTest.rit
    ext/BetterString/bstrlib.c
    ext/BetterString/bstrlib.h
    ext/BetterString/bstrlib.txt
    ext/BetterString/LICENSE
    highlighting/makelang.sh
    highlighting/ritchie.lang
    ObjectTree/ObjectTree_Applied.txt
    ObjectTree/ObjectTree_CFile.txt
    ObjectTree/ObjectTree_HFile.txt
    ObjectTree/ObjectTree_Input.txt
    rsl/Array.rit
    rsl/rsl.c
    rsl/rsl.h
    rsl/rsl.rit
    rsl/RSL_Array.c
    rsl/RSL_Array.h
    rsl/RSL_Stream.c
    rsl/RSL_Stream.h
    rsl/RSL_String.c
    rsl/RSL_String.h
    rsl/RSL_Vector.c
    rsl/RSL_Vector.h
    rsl/Stream.rit
    rsl/String.rit
    rsl/Vector.rit
    tests/CodeBlocks.rit
    tests/codeinsert.rit
    tests/condreturn.rit
    tests/expressionsFloat.rit
    tests/expressionsInt.rit
    tests/floatDeclaration.rit
    tests/functions.rit
    tests/GenericTest1.rit
    tests/GenericTest2.rit
    tests/inheritance.rit
    tests/intDeclaration.rit
    tests/MemManagedString1.rit
    tests/ObjectAtIndex.rit
    tests/oneliner.rit
    tests/out.log
    tests/StreamTest.rit
    tests/test.c
    tests/testfile.text
    tests/UnknownIdentError.rit
    clr.sh
    comp.sh
    crsl.c
    crsl.h
    errors.c
    errors.h
    example.rit
    import.c
    LICENCE.md
    Makefile
    ObjectTree.c
    ObjectTree.h
    preproc.c
    preproc.h
    README.md
    rix.l
    rix.sh
    rix.y
    rixbuild.sh
    rixc.c
    rixc.h
    wizard.sh)

add_executable(ride_parser ${SOURCE_FILES})